[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"


[project]
name = "deepsea-commons"
version = "0.0.1"
authors = [
  { name="Stone Zhong", email="stone.zhong@gmail.com" },
]
description = "Common library for deepsea"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/stonezhong/deepsea"
Issues = "https://github.com/stonezhong/deepsea/issues"
